[project]
name = "owu-chroma"
version = "0.1.0"
description = "Create and sync ChromaDB vector databases from ZIP files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
owu-chroma = "owu_chroma.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
